pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-test-pod
  labels:
    app: my-test-pod  # This label should match the service selector
spec:
  containers:
  - name: nginx-container
    image: nginx
