odoo-main-service.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-main-service
spec:
  selector:
    app: odoo-main
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
  type: NodePort
